[tool.poetry]
name = "httpserver_mock"
version = "0.1.0"
description = ""
authors = ["YUChoe@7577 <yonguk.choe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
noizze_crawler = "^12.0"
wheel = "^0.33.6"
twine = "^2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
